force-app/main/default/objects/QTB_Data_Holder__c/QTB_Data_Holder__c.object-meta.xml
<CustomObject>
    <label>Data Holder</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Data Holder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Holders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>