force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_APIComment__c.field-meta.xml
<CustomField>
    <fullName>QTB_APIComment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>