force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_APIDocument_Id__c.field-meta.xml
<CustomField>
    <fullName>QTB_APIDocument_Id__c</fullName>
    <label>Document Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>