force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_APIErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>QTB_APIErrorMessage__c</fullName>
    <description>this holds an error message for failed Regular API Process</description>
    <label>QTB_APIErrorMessage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>