force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_APIFailedContracts__c.field-meta.xml
<CustomField>
    <fullName>QTB_APIFailedContracts__c</fullName>
    <description>this hold failed contract in Regular API process</description>
    <label>QTB_APIFailedContracts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>