force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_APIStatus__c.field-meta.xml
<CustomField>
    <fullName>QTB_APIStatus__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Partially Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>