force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_APISuccessContracts__c.field-meta.xml
<CustomField>
    <fullName>QTB_APISuccessContracts__c</fullName>
    <description>to hold success contracts for Regular API</description>
    <label>QTB_APISuccessContracts</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>