force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_APIType__c.field-meta.xml
<CustomField>
    <fullName>QTB_APIType__c</fullName>
    <label>APIType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>