force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_APIUploaded_By__c.field-meta.xml
<CustomField>
    <fullName>QTB_APIUploaded_By__c</fullName>
    <label>Uploaded By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>