force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_APIUploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_APIUploaded_Date__c</fullName>
    <label>Uploaded Date</label>
    <type>Date</type>
</CustomField>