force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__BillingCountry</valueSetName>
    </valueSet>
</CustomField>