force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_Legal_Entity_Country__c.field-meta.xml
<CustomField>
    <fullName>QTB_Legal_Entity_Country__c</fullName>
    <formula>TEXT(QTB_Original_Invoice__r.blng__Account__r.QTB_Legal_Entity_Country__c)</formula>
    <label>Legal Entity Country</label>
    <type>Text</type>
</CustomField>