force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_New_ReBill_Order__c.field-meta.xml
<CustomField>
    <fullName>QTB_New_ReBill_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New ReBill Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Data Holders</relationshipLabel>
    <relationshipName>Data_Holders</relationshipName>
    <type>Lookup</type>
</CustomField>