force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_Original_Invoice__c.field-meta.xml
<CustomField>
    <fullName>QTB_Original_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Invoice</label>
    <referenceTo>blng__Invoice__c</referenceTo>
    <relationshipLabel>Data Holders</relationshipLabel>
    <relationshipName>Data_Holders</relationshipName>
    <type>Lookup</type>
</CustomField>