force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_ReBill__c.field-meta.xml
<CustomField>
    <fullName>QTB_ReBill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReBill</label>
    <referenceTo>QTB_Data_Holder__c</referenceTo>
    <relationshipLabel>ReBill Detail</relationshipLabel>
    <relationshipName>Data_Holders</relationshipName>
    <type>Lookup</type>
</CustomField>