force-app/main/default/objects/QTB_Data_Holder__c/fields/QTB_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>