force-app/main/default/objects/QTB_Data_Holder__c/recordTypes/QTB_ReBill.recordType-meta.xml
<RecordType>
    <fullName>QTB_ReBill</fullName>
    <active>true</active>
    <label>ReBill</label>
</RecordType>