force-app/main/default/objects/QTB_Data_Holder__c/recordTypes/QTB_ReBill_Detail.recordType-meta.xml
<RecordType>
    <fullName>QTB_ReBill_Detail</fullName>
    <active>true</active>
    <label>ReBill Detail</label>
</RecordType>