force-app/main/default/objects/QTB_Data_Holder__c/recordTypes/Uplift.recordType-meta.xml
<RecordType>
    <fullName>Uplift</fullName>
    <active>true</active>
    <label>Uplift</label>
</RecordType>