force-app/main/default/objects/QTB_Data_Holder__c/listViews/ReBill_Records.listView-meta.xml
<ListView>
    <fullName>ReBill_Records</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QTB_Data_Holder__c.QTB_ReBill</value>
    </filters>
    <label>ReBill Records</label>
</ListView>